# osm-gps-map

./: configure.ac
python/: Makefile.am  openstreetmap-gps-map.py  osmgpsmap.defs  osmgpsmap.override  osmgpsmapmodule.c
src/: Makefile.am  main.c  osd-utils.c  osd-utils.h  osm-gps-map-osd-classic.c  osm-gps-map-osd-classic.h  osm-gps-map-osd.c  osm-gps-map-osd.h  osm-gps-map-types.h  osm-gps-map.c  osm-gps-map.h
